--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,7 +1,7 @@
 extends ./base.jade
 block content
 	.row
-		h2.text-center learn with the smarty-est
+		h2.text-center learn with the smarty-est lalala
 	.row
 		.col-md-5
 			h2.text-center Science
