--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,7 +1,7 @@
 extends ./base.jade
 block content
 	.row
-		h2.text-center learn with the smarty-est lalala
+		h2.text-center learn with the smarty-est 
 	.row
 		.col-md-5
 			h2.text-center Science
@@ -9,7 +9,7 @@ block content
 				.box
 					a(href="{{url_for('ad1')}}")
 						link(href='/static/css/audiodoc_box.css', rel='stylesheet')
-						img(src='/static/Images/Tate_Creed.jpg', width='500', alt=' photo Jupiter_and_Ganymede.jpg')
+						img(src='/static/Images/Jupiter_and_Ganymede.jpg', width='500', alt=' photo Jupiter_and_Ganymede.jpg')
 						.caption.fade-caption
 							h2 Aliens in the solar system
 							br
