jupiter image with shorter name

--- a/templates/ad1.jade
+++ b/templates/ad1.jade
@@ -5,7 +5,7 @@ block content
             .row
                 h2.text-center Science
             .row.text-center
-                img.img-responsive(src='/static/Images/Jupiter_and_Ganymede.jpg', width='700', alt=' photo Jupiter_and_Ganymede.jpg')
+                img.img-responsive(src='/static/Images/Jupiter_and_Ganymede.jpg', width='700', alt=' photo Jup_and_Gan.jpg')
         .col-md-6.text-center
             .row
                 h2.text-center please leave some feedback on the audio-doc
