added audioplayer (need to fix it though); cleaned up ad1

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -6,6 +6,9 @@ html(lang="en")
         link(href='/static/css/bootstrap.min.css', rel='stylesheet')
         link(href='/static/css/sticky_footer.css', rel='stylesheet')
         link(href='/static/css/textbox.css', rel='stylesheet')
+        link(href='/static/css/audioplayer.css', rel='stylesheet')
+            style
+                script(type='/static/js/audioplayer.js')
     body
         // .container is a class (don't touch this)
         .wrapper
