--- a/templates/index.jade
+++ b/templates/index.jade
@@ -74,5 +74,9 @@ block content
 							br
 							br
 							h6.text-left 6.20 min  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 4 days remaining
+	.row
+		p About Smartycrap
+	.row
+		p Contribute to Smartycrap
 			
 	
