--- a/templates/base.jade
+++ b/templates/base.jade
@@ -7,8 +7,6 @@ html(lang="en")
         link(href='/static/css/sticky_footer.css', rel='stylesheet')
         link(href='/static/css/textbox.css', rel='stylesheet')
         link(href='/static/css/audioplayer.css', rel='stylesheet')
-            style
-                script(type='/static/js/audioplayer.js')
     body
         // .container is a class (don't touch this)
         .wrapper
@@ -41,16 +39,32 @@ html(lang="en")
                         h1.text-center smartycrap  
                 .row
                     block content
-            .push
+                script(src='static/js/audioplayer.js')
+                script(src='static/js/smooth-scroll.js')
+                smoothScroll.init({
+                    speed: 500,                    // Integer. How fast to complete the scroll in milliseconds
+                    easing: 'easeInOutCubic',      // Easing pattern to use
+                    updateURL: true,               // Boolean. Whether or not to update the URL with the anchor hash on scroll
+                    offset: 0,                     // Integer. How far to offset the scrolling anchor location in pixels
+                    callbackBefore: function ( toggle, anchor ) {},     // Function to run before scrolling
+                    callbackAfter: function ( toggle, anchor ) {}       // Function to run after scrolling
+                });
+        .row
+            &b
+        .push
         .footer
-            p.text-center SmartyCrap: 
-                a(href="{{url_for('index')}}") Home 
-                | 
-                a(href="{{url_for('about')}}") About
-                |    
-                a(href="{{url_for('contribute')}}") Contribute
-                |    
-                a(href="{{url_for('contact')}}") Contact
+            block foot
+//            p.text-center SmartyCrap: 
+//                a(href="{{url_for('index')}}") Home 
+//                | 
+//                a(href="{{url_for('about')}}") About
+//                |    
+//                a(href="{{url_for('contribute')}}") Contribute
+//                |    
+//                a(href="{{url_for('contact')}}") Contact
+        
+
+
                     
         
             
