--- a/templates/base.jade
+++ b/templates/base.jade
@@ -10,7 +10,7 @@ html(lang="en")
     body
         // .container is a class (don't touch this)
         .wrapper
-            nav.navbar.navbar-default(role='navigation')
+            nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
                 .container
                     // Brand and toggle get grouped for better mobile display
                     .navbar-header
@@ -22,7 +22,7 @@ html(lang="en")
                         a.navbar-brand(href="{{url_for('index')}}") SmartyCrap
                     // Collect the nav links, forms, and other content for toggling
                     #bs-example-navbar-collapse-1.collapse.navbar-collapse
-                        ul.nav.navbar-nav
+                        ul.nav.navbar-nav.navbar-center
                         ul.nav.navbar-nav.navbar-right
                             .ss-form.navbar-form
                                 form#ss-form(action='https://docs.google.com/forms/d/1K8BYGUtYWzgzfWv-LzDYP9ByrWfmN0MWmzTItsxJTqw/formResponse', method='POST', target='_self', onsubmit='')
@@ -32,9 +32,9 @@ html(lang="en")
                   // /.container-fluid
             .container
                 .row
-                    .col-md-4.col-md-offset-4
-                        // .text-center is defined by bootstrap.css
-                        h1.text-center smartycrap 
+                    &nbsp
+                .row
+                    &nbsp
                 .row
                     block content
                 script(src='static/js/audioplayer.js')
