fixed scrolly thing, javascript. audioplayer still not working

--- a/static/css/audioplayer.css
+++ b/static/css/audioplayer.css
@@ -2,7 +2,7 @@ html, body { height: 100% }
 
 body {
   margin: 0 auto;
-  background-color: ;
+  background-color: #222;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
