put scrolly thing on both pages; commented out audioplayer (was messing up some links)

--- a/templates/ad1.jade
+++ b/templates/ad1.jade
@@ -33,7 +33,7 @@ block content
         img.displayed(src='/static/Images/Jupiter_and_Ganymede.jpg', width='700', alt=' photo Jup_and_Gan.jpg')
     .row
         &nbsp
-    .row
+    //.row
         #audio_controls
             audio
                 source(src="/static/audio/science_ganymede.mp3", type='audio/mp3')
