--- a/templates/index.jade
+++ b/templates/index.jade
@@ -25,7 +25,9 @@ block content
 
 
 	.row
-		h2.text-center learn with the smarty-est
+		h2.text-center serialised object {{json}}
+	.row
+		p object after serialisation and deserialisation: {{obj}}
 	.row
 		.col-md-5
 			h2.text-center Science
@@ -102,9 +104,7 @@ block content
 		span#about
 		|
 		p &nbsp
-
 	.row
-
 		h3 About Smartycrap
 		p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tristique, arcu ut porta egestas, nulla tortor blandit est, in vehicula metus tellus at dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vitae nulla id turpis convallis varius sed ac dolor. Sed dignissim elementum neque. Fusce consectetur eleifend est. Etiam vel erat tortor. Nulla facilisi. Etiam in condimentum nunc. Donec vulputate ipsum ut erat accumsan volutpat. Phasellus eu malesuada massa, et sagittis est. Suspendisse ullamcorper varius ultricies. Praesent aliquet ipsum ac elementum pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tristique, arcu ut porta egestas, nulla tortor blandit est, in vehicula metus tellus at dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vitae nulla id turpis convallis varius sed ac dolor. Sed dignissim elementum neque. Fusce consectetur eleifend est. Etiam vel erat tortor. Nulla facilisi. Etiam in condimentum nunc. Donec vulputate ipsum ut erat accumsan volutpat. Phasellus eu malesuada massa, et sagittis est. Suspendisse ullamcorper varius ultricies. Praesent aliquet ipsum ac elementum pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tristique, arcu ut porta egestas, nulla tortor blandit est, in vehicula metus tellus at dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vitae nulla id turpis convallis varius sed ac dolor. Sed dignissim elementum neque. Fusce consectetur eleifend est. Etiam vel erat tortor. Nulla facilisi. Etiam in condimentum nunc. Donec vulputate ipsum ut erat accumsan volutpat. Phasellus eu malesuada massa, et sagittis est. Suspendisse ullamcorper varius ultricies. Praesent aliquet ipsum ac elementum pellentesque. Praesent aliquet ipsum ac elementum pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tristique, arcu ut porta egestas, nulla tortor blandit est, in vehicula metus tellus at dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vitae nulla id turpis convallis varius sed ac dolor. Sed dignissim elementum neque. Fusce consectetur eleifend est. Etiam vel erat tortor. Nulla facilisi. Etiam in condimentum nunc. Donec vulputate ipsum ut erat accumsan volutpat. Phasellus eu malesuada massa, et sagittis est. Suspendisse ullamcorper varius ultricies. Praesent aliquet ipsum ac elementum pellentesque. Praesent aliquet ipsum ac elementum pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tristique, arcu ut porta egestas, nulla tortor blandit est, in vehicula metus tellus at dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vitae nulla id turpis convallis varius sed ac dolor. Sed dignissim elementum neque. Fusce consectetur eleifend est. Etiam vel erat tortor. Nulla facilisi. Etiam in condimentum nunc. Donec vulputate ipsum ut erat accumsan volutpat. Phasellus eu malesuada massa, et sagittis est. Suspendisse ullamcorper varius ultricies. Praesent aliquet ipsum ac elementum pellentesque.
 	.row
