created ganymede.json; and can call up attributes in jade files

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -25,9 +25,7 @@ block content
 
 
 	.row
-		h2.text-center serialised object {{json}}
-	.row
-		p object after serialisation and deserialisation: {{obj}}
+		h2.text-center {{json}}
 	.row
 		.col-md-5
 			h2.text-center Science
