fixed the "back to top" buttom

--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -4,6 +4,7 @@ block content
 
     nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
         .container
+            span#top
             // Brand and toggle get grouped for better mobile display
             .navbar-header
                 button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
@@ -84,8 +85,5 @@ block content
     .row
         a(data-scroll='', href='#top')  back to top
         span#feedback
-
-
-
 
 
