--- a/static/css/audioplayer.css
+++ b/static/css/audioplayer.css
@@ -1,284 +1,408 @@
-html, body { height: 100% }
 
-body {
-  margin: 0 auto;
-  background-color: #222;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
+/*
+    PLAYER
+*/
+
+.audioplayer
+{
+    height: 2.5em; /* 40 */
+    color: #fff;
+    text-shadow: 1px 1px 0 #000;
+    border: 1px solid #222;
+    position: relative;
+    z-index: 1;
+    background: #333;
 }
 
-#audio_controls {
-  background: rgba(0, 0, 0, 0.4);
-  background: #222;
-  padding: 5px;
-  margin: 0 auto;
-  width: 490px;
-  border-radius: 0 0 3px 3px;
-  top: 50px;
-  overflow: hidden;
-}
 
-#audio_controls button {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  vertical-align: top;
-  background: transparent;
-  border: none;
-  padding: 10px;
-  border-radius: 2px;
-  transition: box-shadow 0.2s;
-  color: white;
-}
+    /* mini mode (fallback) */
 
-#audio_controls button:hover {
-  box-shadow: inset 0 -40px 0 rgba(255, 255, 255, 0.4);
-}
+    .audioplayer-mini
+    {
+        width: 2.5em; /* 40 */
+        margin: 0 auto;
+    }
 
-#audio_controls button:active {
-  box-shadow: inset 0 -40px 0 rgba(255, 255, 255, 0.4);
-  background: rgba(255, 255, 255, 0.7);
-}
 
-#progress {
-  position: relative;
-  z-index: 50;
-  width: 400px;
-  -webkit-appearance: none;
-  appearance: none;
-  background: rgba(0, 0, 0, 0.4);
-  vertical-align: top;
-  margin: 0;
-  border-radius: 2px;
-  height: 40px;
-  overflow: hidden;
-}
+    /* player elements: play/pause and volume buttons, played/duration timers, progress bar of loaded/played */
 
-#progress::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 15px;
-  height: 40px;
-  background: #4CA2B9;
-  transition: background 0.2s;
-}
+    .audioplayer > div
+    {
+        position: absolute;
+    }
 
-#progress::-webkit-slider-thumb:hover {
-  background: rgba(255, 255, 255, 0.8);
-}
 
-#sound_box_outer {
-  display: none;
-  position: absolute;
-  background: transparent;
-  width: 30px;
-  height: 125px;
-  margin-top: -45px;
-  margin-left: 440px;
-  padding: 15px;
-  padding-top: 55px;
-  border-radius: 3px;
-}
+    /* play/pause button */
 
-#sound_box {
-  position: absolute;
-  background: rgba(0, 0, 0, 0.4);
-  background: #222;
-  width: 30px;
-  height: 125px;
-  border-radius: 3px;
-  z-index: 10;
-}
+    .audioplayer-playpause
+    {
+        width: 2.5em; /* 40 */
+        height: 100%;
+        text-align: left;
+        text-indent: -9999px;
+        cursor: pointer;
+        z-index: 2;
+        top: 0;
+        left: 0;
+    }
+        .audioplayer:not(.audioplayer-mini) .audioplayer-playpause
+        {
+            border-right: 1px solid #555;
+            border-right-color: rgba( 255, 255, 255, .1 );
+        }
+        .audioplayer-mini .audioplayer-playpause
+        {
+            width: 100%;
+        }
+        .audioplayer-playpause:hover,
+        .audioplayer-playpause:focus
+        {
+            background-color: #222;
+        }
+        .audioplayer-playpause a
+        {
+            display: block;
+        }
+        .audioplayer-stopped .audioplayer-playpause a
+        {
+            width: 0;
+            height: 0;
+            border: 0.5em solid transparent; /* 8 */
+            border-right: none;
+            border-left-color: #fff;
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin: -0.5em 0 0 -0.25em; /* 8 4 */
+        }
+        .audioplayer-playing .audioplayer-playpause a
+        {
+            width: 0.75em; /* 12 */
+            height: 0.75em; /* 12 */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin: -0.375em 0 0 -0.375em; /* 6 */
+        }
+            .audioplayer-playing .audioplayer-playpause a:before,
+            .audioplayer-playing .audioplayer-playpause a:after
+            {
+                width: 40%;
+                height: 100%;
+                background-color: #fff;
+                content: '';
+                position: absolute;
+                top: 0;
+            }
+            .audioplayer-playing .audioplayer-playpause a:before
+            {
+                left: 0;
+            }
+            .audioplayer-playing .audioplayer-playpause a:after
+            {
+                right: 0;
+            }
 
-#sound_text {
-  display: block;
-  font-family: calibri;
-  margin-top: 105px;
-  text-align: center;
-  color: white;
-}
 
-#sound_bar {
-  position: absolute;
-  z-index: 50;
-  width: 100px;
-  -webkit-appearance: none;
-  appearance: none;
-  background: rgba(0, 0, 0, 0.4);
-  vertical-align: top;
-  margin: 0;
-  margin-top: 45px;
-  margin-left: -35px;
-  border-radius: 2px;
-  height: 20px;
-  overflow: hidden;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
+    /* timers */
 
-#sound_bar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  background: #4CA2B9;
-  width: 10px;
-  height: 40px;
-}
+    .audioplayer-time
+    {
+        width: 4.375em; /* 70 */
+        height: 100%;
+        line-height: 2.375em; /* 38 */
+        text-align: center;
+        z-index: 2;
+        top: 0;
+    }
+        .audioplayer-time-current
+        {
+            border-left: 1px solid #111;
+            border-left-color: rgba( 0, 0, 0, .25 );
+            left: 2.5em; /* 40 */
+        }
+        .audioplayer-time-duration
+        {
+            border-right: 1px solid #555;
+            border-right-color: rgba( 255, 255, 255, .1 );
+            right: 2.5em; /* 40 */
+        }
+            .audioplayer-novolume .audioplayer-time-duration
+            {
+                border-right: 0;
+                right: 0;
+            }
 
-#pause_button {
-  display: none;
-}
 
-#play_icon {
-  margin: 0 auto;
-  display: block;
-  width: 0;
-  height: 0;
-  border-left: 15px solid white;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-}
+    /* progress bar of loaded/played */
 
-#pause_icon {
-  margin: 0 auto;
-  display: block;
-  width: 15px;
-  height: 15px;
-  background: linear-gradient(90deg, white 37%, transparent 37%, transparent 63%, white 63%);
-}
+    .audioplayer-bar
+    {
+        height: 0.875em; /* 14 */
+        background-color: #222;
+        cursor: pointer;
+        z-index: 1;
+        top: 50%;
+        right: 6.875em; /* 110 */
+        left: 6.875em; /* 110 */
+        margin-top: -0.438em; /* 7 */
+    }
+        .audioplayer-novolume .audioplayer-bar
+        {
+            right: 4.375em; /* 70 */
+        }
+        .audioplayer-bar div
+        {
+            width: 0;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        .audioplayer-bar-loaded
+        {
+            background-color: #333;
+            z-index: 1;
+        }
+        .audioplayer-bar-played
+        {
+            background: #007fd1;
+            z-index: 2;
+        }
 
-#sound_icon {
-  width: 4px;
-  height: 10px;
-  margin-left: 4px;
-  background: white;
-  display: block;
-}
 
-#sound_icon:after {
-  content: "";
-  width: 10px;
-  height: 10px;
-  background: transparent;
-  position: absolute;
-  margin-top: -6px;
-  margin-left: -7px;
-  border-right: 6px solid white;
-  border-top: 6px solid transparent;
-  border-bottom: 6px solid transparent;
-}
+    /* volume button */
 
-#sound {
-  position: absolute;
-  height: 40px;
-  margin-left: 138px;
-  background: transparent;
-  width: auto;
-  opacity: 0;
-}
+    .audioplayer-volume
+    {
+        width: 2.5em; /* 40 */
+        height: 100%;
+        border-left: 1px solid #111;
+        border-left-color: rgba( 0, 0, 0, .25 );
+        text-align: left;
+        text-indent: -9999px;
+        cursor: pointer;
+        z-index: 2;
+        top: 0;
+        right: 0;
+    }
+        .audioplayer-volume:hover,
+        .audioplayer-volume:focus
+        {
+            background-color: #222;
+        }
+        .audioplayer-volume-button
+        {
+            width: 100%;
+            height: 100%;
+        }
+            .audioplayer-volume-button a
+            {
+                width: 0.313em; /* 5 */
+                height: 0.375em; /* 6 */
+                background-color: #fff;
+                display: block;
+                position: relative;
+                z-index: 1;
+                top: 40%;
+                left: 35%;
+            }
+                .audioplayer-volume-button a:before,
+                .audioplayer-volume-button a:after
+                {
+                    content: '';
+                    position: absolute;
+                }
+                .audioplayer-volume-button a:before
+                {
+                    width: 0;
+                    height: 0;
+                    border: 0.5em solid transparent; /* 8 */
+                    border-left: none;
+                    border-right-color: #fff;
+                    z-index: 2;
+                    top: 50%;
+                    right: -0.25em;
+                    margin-top: -0.5em; /* 8 */
+                }
+                .audioplayer:not(.audioplayer-muted) .audioplayer-volume-button a:after
+                {
+                    /* "volume" icon by Nicolas Gallagher, http://nicolasgallagher.com/pure-css-gui-icons */
+                    width: 0.313em; /* 5 */
+                    height: 0.313em; /* 5 */
+                    border: 0.25em double #fff; /* 4 */
+                    border-width: 0.25em 0.25em 0 0; /* 4 */
+                    left: 0.563em; /* 9 */
+                    top: -0.063em; /* 1 */
+                    -webkit-border-radius: 0 0.938em 0 0; /* 15 */
+                    -moz-border-radius: 0 0.938em 0 0; /* 15 */
+                    border-radius: 0 0.938em 0 0; /* 15 */
+                    -webkit-transform: rotate( 45deg );
+                    -moz-transform: rotate( 45deg );
+                    -ms-transform: rotate( 45deg );
+                    -o-transform: rotate( 45deg );
+                    transform: rotate( 45deg );
+                }
 
-#sound span {
-  display: inline-block;
-  margin-top: 3px;
-  width: 20px;
-  height: 34px;
-  background: rgba(255, 255, 255, 0.1);
-  -webkit-animation: beat 0.7s infinite;
-  animation: beat 0.7s infinite;
-}
 
-#sound span:nth-child(6n + 1) {
-  animation-delay: 0.5s;
-}
+        /* volume dropdown */
 
-#sound span:nth-child(6n + 2) {
-  animation-delay: 0.8s;
-}
+        .audioplayer-volume-adjust
+        {
+            height: 6.25em; /* 100 */
+            cursor: default;
+            position: absolute;
+            left: 0;
+            right: -1px;
+            top: -9999px;
+            background: #333;
+        }
+            .audioplayer-volume:not(:hover) .audioplayer-volume-adjust
+            {
+                opacity: 0;
+            }
+            .audioplayer-volume:hover .audioplayer-volume-adjust
+            {
+                top: auto;
+                bottom: 100%;
+            }
+            .audioplayer-volume-adjust > div
+            {
+                width: 40%;
+                height: 80%;
+                background-color: #222;
+                cursor: pointer;
+                position: relative;
+                z-index: 1;
+                margin: 30% auto 0;
+            }
+                .audioplayer-volume-adjust div div
+                {
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    background: #007fd1;
+                }
+        .audioplayer-novolume .audioplayer-volume
+        {
+            display: none;
+        }
 
-#sound span:nth-child(6n + 3) {
-  animation-delay: 0.3s;
-}
+/* CSS3 decorations */
 
-#sound span:nth-child(6n + 4) {
-  animation-delay: 0.9s;
-}
+    /* creates a little shadow around the audio player */
+    .audioplayer
+    {
+        -webkit-box-shadow: inset 0 1px 0 rgba( 255, 255, 255, .15 ), 0 0 1.25em rgba( 0, 0, 0, .5 ); /* 20 */
+        -moz-box-shadow: inset 0 1px 0 rgba( 255, 255, 255, .15 ), 0 0 1.25em rgba( 0, 0, 0, .5 ); /* 20 */
+        box-shadow: inset 0 1px 0 rgba( 255, 255, 255, .15 ), 0 0 1.25em rgba( 0, 0, 0, .5 ); /* 20 */
+    }
+    /* shadow around the volume button */
+    .audioplayer-volume-adjust
+    {
+        -webkit-box-shadow: -2px -2px 2px rgba( 0, 0, 0, .15 ), 2px -2px 2px rgba( 0, 0, 0, .15 );
+        -moz-box-shadow: -2px -2px 2px rgba( 0, 0, 0, .15 ), 2px -2px 2px rgba( 0, 0, 0, .15 );
+        box-shadow: -2px -2px 2px rgba( 0, 0, 0, .15 ), 2px -2px 2px rgba( 0, 0, 0, .15 );
+    }
+    /* makes the progress bar nicer (some nice shading) */
+    .audioplayer-bar,
+    .audioplayer-volume-adjust > div
+    {
+        -webkit-box-shadow: -1px -1px 0 rgba( 0, 0, 0, .5 ), 1px 1px 0 rgba( 255, 255, 255, .1 );
+        -moz-box-shadow: -1px -1px 0 rgba( 0, 0, 0, .5 ), 1px 1px 0 rgba( 255, 255, 255, .1 );
+        box-shadow: -1px -1px 0 rgba( 0, 0, 0, .5 ), 1px 1px 0 rgba( 255, 255, 255, .1 );
+    }
+    .audioplayer-volume-adjust div div,
+    .audioplayer-bar-played
+    {
+        -webkit-box-shadow: inset 0 0 5px rgba( 255, 255, 255, .5 );
+        -moz-box-shadow: inset 0 0 5px rgba( 255, 255, 255, .5 );
+        box-shadow: inset 0 0 5px rgba( 255, 255, 255, .5 );
+    }
+    .audioplayer-playpause,
+    .audioplayer-volume a
+    {
+        -webkit-filter: drop-shadow( 1px 1px 0 #000 );
+        -moz-filter: drop-shadow( 1px 1px 0 #000 );
+        -ms-filter: drop-shadow( 1px 1px 0 #000 );
+        -o-filter: drop-shadow( 1px 1px 0 #000 );
+        filter: drop-shadow( 1px 1px 0 #000 );
+    }
 
-#sound span:nth-child(6n + 5) {
-  animation-delay: 0.5s;
-}
+    /* creates a colour gradient on the progress bar */
 
-#sound span:nth-child(6n + 6) {
-  animation-delay: 0s;
-}
+    /*
+    .audioplayer-bar-played
+    {
+        background: -webkit-gradient( linear, left top, right top, from( #007fd1 ), to( #c600ff ) );
+        background: -webkit-linear-gradient( left, #007fd1, #c600ff );
+        background: -moz-linear-gradient( left, #007fd1, #c600ff );
+        background: -ms-radial-gradient( left, #007fd1, #c600ff );
+        background: -o-linear-gradient( left, #007fd1, #c600ff );
+        background: linear-gradient( to right, #007fd1, #c600ff );
+    }
+    */
 
-@-webkit-keyframes beat {
-  0% {
-    height: 13px;
-    margin-top: 25px;
-  }
-  40% {
-    height: 34px;
-    margin-top: 3px;
-  }
-  100% {
-    height: 13px;
-    margin-top: 25px;
-  }
-}
+    /* creates a colour gradient on the volume bar */
 
-@-moz-keyframes beat {
-  0% {
-    height: 13px;
-    margin-top: 25px;
-  }
-  40% {
-    height: 34px;
-    margin-top: 3px;
-  }
-  100% {
-    height: 13px;
-    margin-top: 25px;
-  }
-}
+    /*
+    .audioplayer-volume-adjust div div
+    {
+        background: -webkit-gradient( linear, left bottom, left top, from( #007fd1 ), to( #c600ff ) );
+        background: -webkit-linear-gradient( bottom, #007fd1, #c600ff );
+        background: -moz-linear-gradient( bottom, #007fd1, #c600ff );
+        background: -ms-radial-gradient( bottom, #007fd1, #c600ff );
+        background: -o-linear-gradient( bottom, #007fd1, #c600ff );
+        background: linear-gradient( to top, #007fd1, #c600ff );
+    }
+    */
 
-@-ms-keyframes beat {
-  0% {
-    height: 13px;
-    margin-top: 25px;
-  }
-  40% {
-    height: 34px;
-    margin-top: 3px;
-  }
-  100% {
-    height: 13px;
-    margin-top: 25px;
-  }
-}
+    .audioplayer-bar,
+    .audioplayer-bar div,
+    .audioplayer-volume-adjust div
+    {
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+    }
+    .audioplayer
+    {
+        -webkit-border-radius: 2px;
+        -moz-border-radius: 2px;
+        border-radius: 2px;
+    }
+    .audioplayer-volume-adjust
+    {
+        -webkit-border-top-left-radius: 2px;
+        -webkit-border-top-right-radius: 2px;
+        -moz-border-radius-topleft: 2px;
+        -moz-border-radius-topright: 2px;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+    }
 
-@keyframes beat {
-  0% {
-    height: 13px;
-    margin-top: 25px;
-  }
-  40% {
-    height: 34px;
-    margin-top: 3px;
-  }
-  100% {
-    height: 13px;
-    margin-top: 25px;
-  }
-}
 
-#progress_bar {
-  display: block;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.3);
-  height: 40px;
-  margin-left: 44px;
-  margin-top: -40px;
-  border-radius: 2px 0 0 2px;
+
+
+/* responsiveness */
+
+@media only screen and ( max-width: 32.5em ) /* 520 */
+{
+    body
+    {
+        -webkit-box-shadow: inset 0 0 9.375em rgba( 0, 0, 0, .5 ); /* 150 */
+        -moz-box-shadow: inset 0 0 9.375em rgba( 0, 0, 0, 5 ); /* 150 */
+        box-shadow: inset 0 0 9.375em rgba( 0, 0, 0, .5 ); /* 150 */
+    }
+    #wrapper
+    {
+        width: 100%;
+        height: auto;
+        position: static;
+        padding: 1.25em; /* 20 */
+        margin: 0;
+    }
 }
